# crlot-dsp

./: .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  Makefile  README.md  debug_ola.cc  extensions.bzl  repositories.bzl
assets/: BUILD.bazel
bench/: BUILD.bazel  e2e_benchmark.cc  kernels_benchmark.cc  micro_fft_benchmark.cc  micro_kernels_benchmark.cc  ola_benchmark.cc  performance_benchmark.cc  regression_test.cc
docs/: PHASE0_AUDIT.md
dsp/: BUILD.bazel  framer.cc  framer.h
dsp/base/: aligned_alloc.cc  aligned_alloc.h  span.h
dsp/fft/: BUILD.bazel
dsp/fft/api/: fft_api.h
dsp/fft/backends/: kissfft_adapter.cc
dsp/frame/: FrameQueue.cc  FrameQueue.cpp  FrameQueue.h  Indexing.h  framer.cc
dsp/ola/: OLAAccumulator.cc  OLAAccumulator.h  aos_to_soa.cc  aos_to_soa.h  kernels.cc  kernels.h  kernels_hwy.cc  norm_builder.cc  norm_builder.h
dsp/ring/: BUILD.bazel  ring_buffer.cc  ring_buffer.h
dsp/window/: WindowLUT.cc  WindowLUT.h
io/: BUILD.bazel  wav.cc  wav.h
main/: BUILD.bazel  main.cc
scripts/: run_all.sh
tests/: BUILD.bazel  base_test.cc  dispatch_debug_test.cc  fft_test.cc  frame_queue_test.cc  framer_test.cc  kernels_test.cc  norm_builder_test.cc  ola_accumulator_test.cc  ola_performance_test.cc  performance_benchmark.cc  ring_buffer_test.cc  wav_io_test.cc  window_lut_test.cc  window_test.cc
