# crlot-dsp

"crlot-dsp: Bazel module for the DSP library"

module(
    name = "crlot-dsp",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "fmt", version = "11.2.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")


ext = use_extension("//:extensions.bzl", "non_module_deps")
use_repo(ext, "kissfft_src")