# crlot-dsp

"crlot-dsp: Bazel module for the DSP library"

module(
    name = "crlot-dsp",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "fmt", version = "11.2.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "highway", version = "1.3.0")
bazel_dep(name = "cpu_features", version = "0.10.1")

local_path_override(
    module_name = "cpu_features",
    path = "third_party/cpu_features",
)