load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "frame_queue",
    srcs = ["frame/FrameQueue.cc"],
    hdrs = [
        "frame/FrameQueue.h",
        "frame/Indexing.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_library(
    name = "window_lut",
    srcs = ["window/WindowLUT.cc"],
    hdrs = ["window/WindowLUT.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "framer",
    srcs = ["frame/framer.cc"],
    hdrs = ["frame/framer.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "ola_accumulator",
    srcs = ["ola/OLAAccumulator.cc"],
    hdrs = ["ola/OLAAccumulator.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "base",
    srcs = ["base/aligned_alloc.cc"],
    hdrs = [
        "base/aligned_alloc.h",
        "base/span.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)
