load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "frame_queue",
    srcs = ["frame/FrameQueue.cc"],
    hdrs = [
        "frame/FrameQueue.h",
        "frame/Indexing.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_library(
    name = "window_lut",
    srcs = ["window/WindowLUT.cc"],
    hdrs = ["window/WindowLUT.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "framer",
    srcs = ["frame/framer.cc"],
    hdrs = ["frame/framer.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "ola_accumulator",
    srcs = ["ola/OLAAccumulator.cc"],
    hdrs = ["ola/OLAAccumulator.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//dsp:norm_builder",
        "//dsp:ring_buffer",
        "//dsp:kernels_scalar",
        "//dsp:aos_to_soa",
    ],
    copts = ["-std=c++17"],
)

cc_library(
    name = "kernels_scalar",
    srcs = ["ola/kernels.cc"],
    hdrs = ["ola/kernels.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "aos_to_soa",
    srcs = ["ola/aos_to_soa.cc"],
    hdrs = ["ola/aos_to_soa.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "norm_builder",
    srcs = ["ola/norm_builder.cc"],
    hdrs = ["ola/norm_builder.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//dsp:ring_buffer",
    ],
    copts = ["-std=c++17"],
)

cc_library(
    name = "base",
    srcs = ["base/aligned_alloc.cc"],
    hdrs = [
        "base/aligned_alloc.h",
        "base/span.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "ring_buffer",
    visibility = ["//visibility:public"],
    deps = ["//dsp/ring:ring_buffer"],
)
