load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "frame_queue",
    srcs = ["frame/FrameQueue.cc"],
    hdrs = [
        "frame/FrameQueue.h",
        "frame/Indexing.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_library(
    name = "window_lut",
    srcs = ["window/WindowLUT.cc"],
    hdrs = ["window/WindowLUT.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "framer",
    srcs = ["frame/framer.cc"],
    hdrs = ["frame/framer.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "ola_accumulator",
    srcs = ["ola/OLAAccumulator.cc"],
    hdrs = ["ola/OLAAccumulator.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//dsp:norm_builder",
        "//dsp:ring_buffer",
        "//dsp:kernels",
        "//dsp:aos_to_soa",
    ],
    copts = ["-std=c++17"],
)

cc_library(
    name = "kernels_hwy",
    srcs = ["ola/kernels_hwy.cc"],
    hdrs = ["ola/kernels.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@highway//:hwy",
    ],
    copts = [
        "-std=c++17",
        "-O3",
        # Highway 최적화를 위한 컴파일러 플래그
        "-march=native",
        "-mtune=native",
        # Highway 다중 타겟 컴파일을 위한 설정
        "-DHWY_COMPILE_ALL_ATTAINABLE=1",
    ],
    local_defines = [
        "HWY_COMPILE_ALL_ATTAINABLE=1",
    ],
)

cc_library(
    name = "kernels",
    srcs = ["ola/kernels.cc"],
    hdrs = ["ola/kernels.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":kernels_hwy",
    ],
    copts = ["-std=c++17"],
)

# 이전 버전과의 호환성을 위한 별칭
cc_library(
    name = "kernels_scalar",
    visibility = ["//visibility:public"],
    deps = [":kernels"],
)

cc_library(
    name = "aos_to_soa",
    srcs = ["ola/aos_to_soa.cc"],
    hdrs = ["ola/aos_to_soa.h"],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "norm_builder",
    srcs = ["ola/norm_builder.cc"],
    hdrs = ["ola/norm_builder.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//dsp:ring_buffer",
    ],
    copts = ["-std=c++17"],
)

cc_library(
    name = "base",
    srcs = ["base/aligned_alloc.cc"],
    hdrs = [
        "base/aligned_alloc.h",
        "base/span.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
    copts = ["-std=c++17"],
)

cc_library(
    name = "ring_buffer",
    visibility = ["//visibility:public"],
    deps = ["//dsp/ring:ring_buffer"],
)
