load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    data = [
        "//assets:oboe_wav",
    ],
    deps = [
        "@fmt//:fmt",
        "//third_party:dr_libs",
        "//dsp/fft:fft",
        "//io:wav",
        "@spdlog//:spdlog",
        "@cpu_features//:cpuinfo",
    ],
)
