load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "hello_test",
    size = "small",
    srcs = ["hello_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "wav_io_test",
    size = "small",
    srcs = ["wav_io_test.cc"],
    data = [
        "//assets:oboe_wav",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//io:wav",
        "@spdlog//:spdlog",
    ],
)

cc_test(
    name = "frame_queue_test",
    size = "small",
    srcs = ["frame_queue_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:frame_queue",
    ],
)
