load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "hello_test",
    size = "small",
    srcs = ["hello_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "wav_io_test",
    size = "small",
    srcs = ["wav_io_test.cc"],
    data = [
        "//assets:oboe_wav",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//io:wav",
        "@spdlog//:spdlog",
    ],
)

cc_test(
    name = "frame_queue_test",
    size = "small",
    srcs = ["frame_queue_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:frame_queue",
    ],
)

cc_test(
    name = "window_lut_test",
    size = "small",
    srcs = ["window_lut_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:window_lut",
    ],
    copts = ["-std=c++17"],
)

cc_test(
    name = "window_test",
    size = "small",
    srcs = ["window_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:window_lut",
    ],
    copts = ["-std=c++17"],
)

cc_test(
    name = "framer_test",
    size = "small",
    srcs = ["framer_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:framer",
    ],
    copts = ["-std=c++17"],
)

cc_test(
    name = "ola_performance_test",
    size = "small",
    srcs = ["ola_performance_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:ola_accumulator",
        "//dsp:window_lut",
    ],
    copts = ["-std=c++17"],
)

cc_test(
    name = "ola_accumulator_test",
    size = "small",
    srcs = ["ola_accumulator_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp:ola_accumulator",
        "//dsp:frame_queue",
        "//dsp:window_lut",
    ],
    copts = ["-std=c++17"],
)

cc_test(
    name = "fft_test",
    size = "small",
    srcs = ["fft_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//dsp/fft:fft",
    ],
    copts = ["-std=c++17"],
)
